2006-10-18  Sam Weinig  <sam.weinig@gmail.com>

        Reviewed by Mitz

        Win32 build fix.

        * bridge/win/BrowserExtensionWin.cpp:
        (WebCore::BrowserExtensionWin::BrowserExtensionWin):
        (WebCore::BrowserExtensionWin::createNewWindow):
        * bridge/win/BrowserExtensionWin.h:
        * bridge/win/FrameWin.cpp:
        (WebCore::FrameWin::createNewWindow):
        * bridge/win/FrameWin.h:
        * platform/win/CursorWin.cpp:
        * platform/win/TemporaryLinkStubs.cpp:
        (Image::getHBITMAP):

2006-10-18  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by harrison
        
        <rdar://problem/4784823>
        GMail Editor: Hang occurs when removing list styling on text in a rich text message

        List removal moves the contents of every list item out of the list it's 
        in. When the code tried to move the contents of an empty list item (an li 
        with no child nodes, not even a placeholder br), moveParagraph didn't prune 
        the li, like it would if the li had a placeholder inside it.  So the list 
        removal code went into an infinite loop, continually attempting to de-list 
        an empty list item.

        * editing/CompositeEditCommand.cpp:
        (WebCore::CompositeEditCommand::moveParagraphs): If the selection
        to move was empty and in an empty block that doesn't require a 
        placeholder to prop itself open (like a bordered div or an li), 
        remove it during the move.

2006-10-18  Adele Peterson  <adele@apple.com>

        Reviewed by Beth.

        - Fixed http://bugs.webkit.org/show_bug.cgi?id=11343
          REGRESSION (r16975): fast/events/objc-event-api is failing

          When I moved the autoscroll code from FrameMac to Frame, I mistakingly changed the order of
          a call to invalidateClick.  This change moves it back to the sequence that existed before.  This allows
          the click count to get properly reset during a selection.
