@@ -36,7 +36,6 @@ struct WindowFeatures;
 
 class FrameWinClient {
 public:
-    virtual void createNewWindow(const ResourceRequest&) = 0;
     virtual void createNewWindow(const ResourceRequest&, const WindowFeatures&, Frame*& newFrame) = 0;
     virtual void openURL(const DeprecatedString&, bool lockHistory) = 0;
     virtual void submitForm(const String& method, const KURL&, const FormData*) = 0;
