@@ -1,3 +1,13 @@
+2006-10-18  Sam Weinig  <sam.weinig@gmail.com>
+
+        Reviewed by Maciej.
+
+        Win32 build fix.
+
+        * COM/WebFrame.cpp:
+        (WebFrame::createNewWindow):
+        * COM/WebFrame.h:
+
 2006-10-18  Anders Carlsson  <acarlsson@apple.com>
 
         Reviewed by Adam.
